# ifc2json

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/ifc2json/: __init__.py  __main__.py  convert.py  ifc2json4.py  ifc2json5a.py  reader.py  to_ifcopenshell.py
src/ifcjson/: __init__.py  __main__.py  convert.py  mesh.py  reader.py
